--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   flutter_hooks: ^0.20.5
   lottie: ^3.1.0
+  dio: ^4.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
